# infrastructures

./: README.md
Dockerfiles/aws-ecs-otel-collector/: Dockerfile  README.md  config.yaml
Dockerfiles/axum-server/: Cargo.toml  Dockerfile  README.md  run.sh
Dockerfiles/examples/: README.md
Dockerfiles/go2/: README.md
Dockerfiles/golang-alpine/: Dockerfile
Dockerfiles/lambda-rust/: Dockerfile  README.md
aws/cloudformation/: README.md
aws/lambda_templates/axum_serverless_template/: Cargo.toml  README.md
aws/lambda_templates/axum_serverless_template/.github/workflows/: deploy.yml
aws/lambda_templates/axum_serverless_template/src/: main.rs
dashboards/: README.md
dashboards/hyperdx/: README.md  로그 베이스 대시보드.json
docker-compose/: README.md
docker-compose/clickhouse-cluster/: README.md  docker-compose.yml
docker-compose/clickstack/: README.md
docker-compose/elastic-and-kibana/: README.md  docker-compose.yml
docker-compose/elastic-apm/: README.md  apm-server.service  docker-compose.yml  elasticsearch.service  kibana.service
docker-compose/grafana-and-loki/: Dockerfile.loki  Dockerfile.nodejs  Dockerfile.promtail  README.md  docker-compose.yml  loki-config.yaml  promtail-config.yml
docker-compose/grafana-and-tempo/: README.md  docker-compose.yml  tempo.yaml
docker-compose/grafana-apm/: Dockerfile.otel  Dockerfile.prometheus  Dockerfile.tempo  README.md  docker-compose.yml  grafana.service  otel-collector-config.yaml  tempo.yaml
docker-compose/metabase/: README.md  docker-compose.yml
docker-compose/osm2pgsql/: README.md  (+1 more)
(+179 files in other folders)
